--- a/Assets/Scripts/Core/Runtime/ReMaz.Core.asmdef
+++ b/Assets/Scripts/Core/Runtime/ReMaz.Core.asmdef
@@ -1,11 +1,10 @@
 {
-    "name": "Remaz.Game",
+    "name": "ReMaz.Core",
     "rootNamespace": "",
     "references": [
-        "GUID:18537184b62b4d841b3f068da60e8cff",
-        "GUID:560b04d1a97f54a4e82edc0cbbb69285",
         "GUID:a054610c545346345ac840ee37f4f8a9",
-        "GUID:2d8c0c993f7ab4547a6b18f654961321"
+        "GUID:18537184b62b4d841b3f068da60e8cff",
+        "GUID:560b04d1a97f54a4e82edc0cbbb69285"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
