Selectables framework, ColorScheme

--- a/Assets/Scripts/Core/Editor/ReMaz.Core.Editor.asmdef
+++ b/Assets/Scripts/Core/Editor/ReMaz.Core.Editor.asmdef
@@ -2,7 +2,9 @@
     "name": "ReMaz.Core.Editor",
     "rootNamespace": "",
     "references": [
-        "GUID:2d8c0c993f7ab4547a6b18f654961321"
+        "GUID:2d8c0c993f7ab4547a6b18f654961321",
+        "GUID:18537184b62b4d841b3f068da60e8cff",
+        "GUID:560b04d1a97f54a4e82edc0cbbb69285"
     ],
     "includePlatforms": [
         "Editor"
