--- a/Assets/Scripts/Menu/Runtime/ReMaz.Menu.asmdef
+++ b/Assets/Scripts/Menu/Runtime/ReMaz.Menu.asmdef
@@ -6,7 +6,8 @@
         "GUID:a054610c545346345ac840ee37f4f8a9",
         "GUID:18537184b62b4d841b3f068da60e8cff",
         "GUID:2d8c0c993f7ab4547a6b18f654961321",
-        "GUID:5079dc06f82a840cebe1fdd04122a908"
+        "GUID:5079dc06f82a840cebe1fdd04122a908",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
