Bass song loading

--- a/Assets/Scripts/Menu/Runtime/ReMaz.Menu.asmdef
+++ b/Assets/Scripts/Menu/Runtime/ReMaz.Menu.asmdef
@@ -7,7 +7,8 @@
         "GUID:18537184b62b4d841b3f068da60e8cff",
         "GUID:2d8c0c993f7ab4547a6b18f654961321",
         "GUID:5079dc06f82a840cebe1fdd04122a908",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:2e0f174f1d87c8545b0b7c899bc8efc2"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
