FFT Audio analyzing

--- a/Assets/Scripts/Core/Runtime/ReMaz.Core.asmdef
+++ b/Assets/Scripts/Core/Runtime/ReMaz.Core.asmdef
@@ -6,7 +6,9 @@
         "GUID:18537184b62b4d841b3f068da60e8cff",
         "GUID:560b04d1a97f54a4e82edc0cbbb69285",
         "GUID:5079dc06f82a840cebe1fdd04122a908",
-        "GUID:f51ebe6a0ceec4240a699833d6309b23"
+        "GUID:f51ebe6a0ceec4240a699833d6309b23",
+        "GUID:5e1610474e34c73468aee004a3ddb671",
+        "GUID:db7546f64ddd5c443862cab3c9e28c35"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
