PatternEditor camera movement

--- a/Assets/Scripts/PatternEditor/Runtime/Remaz.PatternEditor.asmdef
+++ b/Assets/Scripts/PatternEditor/Runtime/Remaz.PatternEditor.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:18537184b62b4d841b3f068da60e8cff",
         "GUID:560b04d1a97f54a4e82edc0cbbb69285",
-        "GUID:2d8c0c993f7ab4547a6b18f654961321"
+        "GUID:2d8c0c993f7ab4547a6b18f654961321",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
