--- a/Assets/Scripts/Core/Runtime/ReMaz.Core.asmdef
+++ b/Assets/Scripts/Core/Runtime/ReMaz.Core.asmdef
@@ -8,7 +8,8 @@
         "GUID:5079dc06f82a840cebe1fdd04122a908",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
         "GUID:5e1610474e34c73468aee004a3ddb671",
-        "GUID:db7546f64ddd5c443862cab3c9e28c35"
+        "GUID:db7546f64ddd5c443862cab3c9e28c35",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
