--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,10 +6,17 @@
       "scopes": [
         "com.fluid"
       ]
+    },
+    {
+      "name": "OpenUPM AV",
+      "url": "https://package.openupm.com",
+      "scopes": [
+        "com.av"
+      ]
     }
   ],
   "dependencies": {
-    "com.av.smart-hierarchy": "https://github.com/neon-age/Smart-Hierarchy.git",
+    "com.av.smart-hierarchy": "0.3.1",
     "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
     "com.neuecc.unirx": "https://github.com/neuecc/UniRx.git?path=Assets/Plugins/UniRx/Scripts",
     "com.smalltail.preload": "https://github.com/SmallTailTeam/Unity-Preload.git",
